# JAAC

./: README.md  pyproject.toml
.github/workflows/: pypi.yml  release.yml  test_pypi.yml
examples/: README.md  README.mx  example-dm.txt  example-offer.txt
jaac/: __init__.py  llm.py  pdf.py
jaac/documents/: cv.tex.template.example  jaac.config.toml.example  letter.tex.template.example  profile.txt.example
