[tool.poetry]
name = "jaac"
version = "0.2.3"
description = "Job Application Assets Creator"
authors = ["Jonathan Pelletier <jonathan.pelletier-aafz@thecloudco.ca>"]
repository = "https://github.com/jonapellet/JAAC"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.26.0"
jinja2 = "^3.1.4"
click = "^8.1.7"

[tool.poetry.scripts]
jaac = "jaac:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mkdocs = "^1.6.0"
mkdocs-gitbook = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
